<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.justjava.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />
        <TextView
            android:paddingLeft="16dp"
            android:text="@string/toppings"
            style="@style/HeadingText"
            />
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingLeft="24dp"
            android:text="@string/whipped"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/chocolate_topping_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />
        <TextView
            style="@style/HeadingText"
            android:paddingLeft="16dp"
            android:text="@string/quantity"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:onClick="decrementQuantity"
                android:paddingLeft="16dp"
                android:text="@string/minus"
                />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/startQuantity"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="16sp"
                />
            <Button
                android:id="@+id/button_increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:onClick="incrementQuantity"
                android:paddingLeft="16dp"
                android:text="@string/plus"
                />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="submitOrder"
            android:paddingLeft="16dp"
            android:text="@string/order"
            />


    </LinearLayout>
</ScrollView>